Minor spacing issues

--- a/_sass/docs/_page.scss
+++ b/_sass/docs/_page.scss
@@ -41,19 +41,7 @@ body.is-blue {
   p {
     font-family: 'Bariol', Arial, sans-serif;
     border-bottom: .5rem;
-
-    .box-link {
-      margin: .2rem 0 !important;
-
-      a.more-link {
-        font-size: .9rem;
-        display: block;
-        margin: 2rem 0 0;
-        background: none !important;
-        font-weight: bold;
-      }
-
-  }
+    margin: 0 !important;
 
     ul li {
       margin-left: 0 !important;
@@ -320,7 +308,7 @@ body.is-blue {
   border: 1px solid $_cLightblue;
   box-shadow: -3px 0 0 $_cLightblue;
   color: #fff;
-  margin-bottom: 2em;
+  margin-bottom: 2.5em;
 
   &::before {
     color: #fff;
@@ -329,7 +317,6 @@ body.is-blue {
   a {
     color: #fff;
     font-weight: bold;
-    background-image: linear-gradient(to bottom, transparent 50%, #fff 50%);
   }
 
   a:hover {
@@ -346,7 +333,7 @@ body.is-blue {
 }
 
 .endcontent-block {
-  margin: 3rem 0 0;
+  margin: 3.5rem 0 0;
   display: block;
   position: relative;
   padding: 0;
@@ -488,7 +475,7 @@ div#rating_info_8520732 {
 }
 
 ul#markdown-toc {
-  margin: 1rem 0 2rem;
+  margin: 0rem 0 3rem 0;
 
   li {
     margin: 0 !important;
